# Request-Generator

./: .gitignore  .gitlab-ci.yml  README.md  dump.rdb  pom.xml
Docker/: Dockerfile  build.sh  mosquitto_dockerfile
K8s/: deploy.sh
K8s/manifests/: mosquitto.yaml  persistentVolume.yaml  persistentVolume_output.yaml  reqgen.yaml  storageclass_output.yaml  storgeclass.yaml
example_config/: data_config_example.xml  data_config_output_example.xml
fiber-example/: CMakeLists.txt  CMakeSettings.json
fiber-example/FiberEvaluation/: CMakeLists.txt  FiberEvaluation.cpp  FiberEvaluation.h
kotlin-evaluation/: pom.xml
mosquitto/: docker-compose.yml  mosquitto.conf
native/: CMakeLists.txt  de_hpi_tdgt_fibers_Fiber.cpp  de_hpi_tdgt_fibers_Fiber.h
src/main/java/de/hpi/tdgt/: CLI.kt  Main.java  Main.kt  WebApplication.java
src/main/java/deserialisation/: Deserializer.java
src/main/java/test/: Test.java
src/main/java/test/story/: UserStory.java
src/main/java/test/story/activity/: Activity.java  Data_Generation.java  Request.java
src/main/resources/: application.properties  log4j2.xml
src/test/java/de/hpi/tdgt/: HttpHandlers.java  HttpHandlers.kt  RequestHandlingFramework.java  RequestHandlingFramework.kt  Utils.java
src/test/java/deserialisation/: DeserializeActivity.java  DeserializeStory.java  DeserializeTest.java  Utils.java
src/test/resources/de/hpi/tdgt/: NoopTest.json  RequestExample.json  RequestExampleWithAssertions.json  RequestExampleWithAssertionsAndWarmup.json  RequestExampleWithDelay.json  RequestExampleWithManyParallelRequests.json  RequestExampleWithNonIndexIDs.json  RequestExampleWithRepeat.json  RequestExampleWithRequestReplacement.json  RequestExampleWithTokens.json  RequestFailureExample.json  RequestTooLongExample.json  RequestTooLongFailureExample.json  assignment.json  perf.json  perf_combined.json  perf_fs.json  posts.csv  search.csv  signup.html  tc_test_config_example_local.json  tc_test_config_example_local_long.json  test_config_example.json  test_config_example_local.json  users.csv  values.csv
src/test/resources/deserialisation/: test_config_example.json
(+127 files in other folders)
